# songbot

./: .dockerignore  CLAUDE.md  Containerfile  README.md  meson.build  meson_options.txt  module.mapper.in
.forgejo/workflows/: docker-build.yml  lvchart_update.yml  sdk-update.yml
.github/workflows/: docker-build.yml
res/: release_event_pic_orig_12222  release_event_pic_orig_12251  release_event_pic_orig_1561  release_event_pic_orig_1854  release_event_pic_orig_1859  release_event_pic_orig_1940  release_event_pic_orig_1943  release_event_pic_orig_2422  release_event_pic_orig_2510  release_event_pic_orig_2511  release_event_pic_orig_2519  release_event_pic_orig_2520  release_event_pic_orig_2522  release_event_pic_orig_2523  release_event_pic_orig_2947  release_event_pic_orig_3250  release_event_pic_orig_3305  release_event_pic_orig_3752  release_event_pic_orig_4058  release_event_pic_orig_4114  release_event_pic_orig_4161  release_event_pic_orig_4233  release_event_pic_orig_4490  release_event_pic_orig_4765  release_event_pic_orig_5751  release_event_pic_orig_6045  release_event_pic_orig_6539  release_event_pic_orig_7214  release_event_pic_orig_7765  release_event_pic_orig_8380  release_event_pic_orig_8768  release_event_pic_orig_9341  release_event_pic_orig_9401  release_event_pic_orig_9613  release_event_pic_orig_9642  release_event_pic_orig_9644  release_event_pic_orig_9811  release_event_pic_small_thumb_12222  release_event_pic_small_thumb_12251  release_event_pic_small_thumb_1397  (+1195 more)
res/json/: event_12222.json  event_12251.json  event_1397.json  event_1398.json  event_1399.json  event_1413.json  event_1561.json  event_1584.json  event_1618.json  event_1619.json  event_1673.json  event_1854.json  event_1859.json  event_1937.json  event_1939.json  event_1940.json  event_1941.json  event_1943.json  event_2085.json  event_2422.json  event_2489.json  event_2510.json  event_2511.json  event_2514.json  event_2515.json  event_2517.json  event_2519.json  event_2520.json  event_2521.json  event_2522.json  event_2523.json  event_2524.json  event_2526.json  event_2527.json  event_2758.json  event_2786.json  event_2939.json  event_2947.json  event_2948.json  event_2952.json  (+623 more)
res/localvoid/: 2022_12_1.json  2022_12_2.json  2022_12_3.json  2022_12_4.json  2022_12_5.json  2023_01_1.json  2023_01_2.json  2023_01_3.json  2023_01_4.json  2023_02_1.json  2023_02_2.json  2023_02_3.json  2023_02_4.json  2023_03_1.json  2023_03_2.json  2023_03_3.json  2023_03_4.json  2023_03_5.json  2023_04_1.json  2023_04_2.json  2023_04_3.json  2023_04_4.json  2023_05_1.json  2023_05_2.json  2023_05_3.json  2023_05_4.json  2023_06_1.json  2023_06_2.json  2023_06_3.json  2023_06_4.json  2023_06_5.json  2023_07_1.json  2023_07_2.json  2023_07_3.json  2023_07_4.json  2023_08_1.json  2023_08_2.json  2023_08_3.json  2023_08_4.json  2023_08_5.json  (+147 more)
src/: commands.cpp  commands.hpp  concerts-algorithms.cppm  concerts-data.cppm  concerts-raw_data.cppm  concerts-types.cppm  concerts.cppm  config_file.cpp  config_file.hpp  context.cpp  context.hpp  dpp.cppm  errors.cpp  errors.cppm  errors.hpp  formatters.hpp  freq_command.cpp  freq_command.hpp  freqtour_command.cpp  freqtour_command.hpp  gen_version.py  iface_command.cpp  iface_command.hpp  last_command.cpp  last_command.hpp  last_shared.cpp  last_shared.hpp  lastp_command.cpp  lastp_command.hpp  lvchart_command.cpp  lvchart_command.hpp  magic_enum.cppm  main.cpp  meson.build  module.mapper.in  nextlive_command.cpp  nextlive_command.hpp  paged_widget.hpp  producer_command.cpp  producer_command.hpp  (+22 more)
src/vocadb/: config.h.in  cpr.cppm  magic.cppm  main.cpp  meson.build  scraper.cpp  scraper.hpp  vocadb-api.cpp  vocadb-api.cppm  vocadb-api.hpp
subprojects/: boostut.wrap  dpp.wrap  json.wrap  prometheus-cpp.wrap  uni-algo.wrap
subprojects/packagefiles/dpp/: meson.build
subprojects/packagefiles/json-patch/: meson.build
subprojects/packagefiles/prometheus-cpp/: meson.build
subprojects/packagefiles/prometheus-cpp/generated-include/prometheus/detail/: core_export.h  pull_export.h
subprojects/packagefiles/uni-algo-patch/: meson.build
test/: benchmark.cpp  concerts.cpp  meson.build  project_diva.cpp  songs.cpp  ut.cppm
util/: meson.build  primary_song_data_cell.cpp  primary_song_data_cell.hpp  primary_song_data_cell.ui  secondary_song_data_cell.cpp  secondary_song_data_cell.hpp  secondary_song_data_cell.ui  song_item.cpp  song_item.hpp  song_searcher.cpp  song_searcher.gresource.xml  song_searcher.ui  vocadb_song_model.cpp  vocadb_song_model.hpp
